--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -29,7 +29,7 @@
         - AppIntro: <a href="https://github.com/AppIntro/AppIntro/blob/main/LICENSE">Apache-2.0</a>\n\n
         - QrGenerator: <a href="https://github.com/androidmads/QRGenerator/blob/master/LICENSE.md">MIT</a>\n\n
         - Font Awesome: <a href="https://fontawesome.com/license/free">Licenses</a>\n\n
-        - App icon by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>\n\n
+        - App icon and privacy policy icon by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>\n\n
         - SourceCodePro font: <a href="https://github.com/adobe-fonts/source-code-pro/blob/release/LICENSE.md">OFL-1.1</a>\n\n
         </string>
     <string name="connections_csv_fields" translatable="false">IPProto,SrcIP,SrcPort,DstIp,DstPort,UID,App,PackageName,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
