Update French strings

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -52,7 +52,7 @@
     <string name="other_prefs">Autre</string>
     <string name="app_language">Langue</string>
     <string name="lang_english">anglais</string>
-    <string name="system_default">Système</string>
+    <string name="system_default">Paramètre par défaut du système</string>
     <string name="no_activity_file_selection">Aucune application trouvée pour gérer la sélection des fichiers</string>
     <string name="file_saved_with_name">Fichier enregistré sous le nom de « %1$s »</string>
     <string name="donate">Faire un don</string>
@@ -74,7 +74,7 @@
     <string name="root_app_info">Démons système fonctionnant avec des privilèges maximaux</string>
     <string name="deny">Refuser</string>
     <string name="allow">Autoriser</string>
-    <string name="http_server_status">Serveur HTTP : http://%1$s:%2$d</string>
+    <string name="http_server_status">Serveur HTTP: http://%1$s:%2$d</string>
     <string name="open_nav_drawer">Ouvrir le menu</string>
     <string name="save_ok">Enregistré</string>
     <string name="stop_button">Arrêter</string>
@@ -101,12 +101,12 @@
     <string name="http_server_port">Port du serveur HTTP</string>
     <string name="receiver_ip_address">Adresse IP du collecteur</string>
     <string name="receiver_port">Port du collecteur</string>
-    <string name="pcap_file_info">Créer une fichier PCAP dans l\'espace de stockage</string>
+    <string name="pcap_file_info">Créer un fichier PCAP/Pcapng dans l\'espace de stockage de l\'appareil</string>
     <string name="get_app">L\'obtenir :</string>
     <string name="about_text">PCAPdroid est un outil open-source de capture et de suivi de réseau qui fonctionne sans un compte administrateur</string>
     <string name="proxy_port">Port de proxy</string>
     <string name="root_capture">Capturer comme administrateur</string>
-    <string name="enable_socks5_proxy_summary">Rediriger toutes les connexions TCP vers le proxy SOCKS5 spécifié</string>
+    <string name="enable_socks5_proxy_summary">Rediriger toutes les connexions TCP vers un proxy SOCKS5</string>
     <string name="root_capture_summary">Autorise le lancement de PCAPdroid avec d\'autres applications de VPN</string>
     <string name="socks5_proxy">Activer le proxy SOCKS5</string>
     <string name="capture_prefs">Capture</string>
@@ -280,7 +280,7 @@
     <string name="memory_usage">Utilisation de la mémoire</string>
     <string name="ipv4_only">IPv4 uniquement</string>
     <string name="traffic_dump">Extraction du trafic</string>
-    <string name="payload">Payload</string>
+    <string name="payload">Charge utile</string>
     <string name="block_private_dns">Bloquer les DNS privés</string>
     <string name="app_intro_next_button">Suivant</string>
     <string name="app_intro_skip_button">Passer</string>
@@ -299,13 +299,13 @@
     <string name="permission_granted">Permission %1$s acceptée</string>
     <string name="low_memory_info">Cette application n\'a plus de mémoire, il est possible qu\'elle plante</string>
     <string name="capture_stopped_low_memory">La capture a été arrêtée</string>
-    <string name="heap_usage">Utilisation de la mémoire de tas</string>
+    <string name="heap_usage">Utilisation du tas</string>
     <string name="connection_not_found">Cette connexion n\'a pu être trouvée</string>
     <string name="ip_mode">Adresses IP VPN</string>
     <string name="mitm_setup_wizard">Assistance de configuration Mitm</string>
-    <string name="mitm_start_failed">Le service mitm n\'a pu être lancé. Veuillez réinstaller ce greffon et réessayer</string>
+    <string name="mitm_start_failed">"Le service mitm n\'a pu être lancé. Veuillez ouvrir  ce greffon manuellement et réessayez"</string>
     <string name="mitm_addon_new_version">Le greffon mitm de PCAPdroid doit être mis à jour</string>
-    <string name="full_payload">Payload complet</string>
+    <string name="full_payload">Charge utile complète</string>
     <string name="waiting_application_data">En attente des données</string>
     <string name="no_root_firewall">Pare-feu non-root</string>
     <string name="block_quick">Bloquer QUIC</string>
@@ -322,8 +322,8 @@
     <string name="show_action">Afficher</string>
     <string name="license_service_unavailable">Le service de licences PCAPdroid n\'a actuellement pas disponible. Veuillez réessayer dans quelques instants</string>
     <string name="requesting_unlock_token">Demande d\'un \"unlock token\", veuillez patienter</string>
-    <string name="vpn_exemptions">Exception du VPN</string>
-    <string name="remote_server_warning">Pour des raisons de sécurité, envoyer du trafic au serveur distant \"%1$s\" n\'est pas autorisé</string>
+    <string name="vpn_exemptions">Exemptions VPN</string>
+    <string name="remote_server_warning">Pour des raisons de sécurité, envoyer du trafic au serveur distant \"%1$s\" n\'est pas autorisé\"</string>
     <string name="vpn_setup_msg">PCAPdroid simule un VPN pour pouvoir capturer le trafic réseau sans être root. \n \nPour lancer la capture, vous devez accepter la requête VPN de la page suivante.\n\n<b>NOTE:</b> pour continuer, désactivez tout \"VPN permanent\" que vous auriez configuré depuis les paramètres Android</string>
     <string name="vpn_exemptions_summary">Exclure certaines applications de la connexion VPN. Leur trafic ne pourra pas être suivi</string>
     <string name="payload_scams_notice">Cette vue peut contenir des informations sensibles, comme des mots de passe ou des jetons d\'accès.
@@ -332,4 +332,57 @@
     <string name="app_log">Log</string>
     <string name="no_data">Pas de données</string>
     <string name="malware_whitelist_action">Liste blanche (malware) …</string>
+    <string name="full_payload_disabled">L\'option charge utile complète a été désactivée</string>
+    <string name="tls_decryption_summary">Déchiffrer le trafic SSL/TLS en opérant en MitM. Cela fonctionne maintenant avec certaines applications, vérifiez le guide de l\'utilisateur</string>
+    <string name="cert_reinstall_required">Le certificat de l\'Autorité de Certification (AC) n\'est pas installé, lancez l\'assistant de paramétrage du MitM</string>
+    <string name="socks5_redirection">Redirection SOCKS5</string>
+    <string name="socks5_summary">Configurer la redirection vers un proxy SOCKS5</string>
+    <string name="socks5_auth">Authentification SOCKS5</string>
+    <string name="socks5_auth_summary">S\'authentifier sur le proxy par nom d\'utilisateur et mot de passe</string>
+    <string name="copy_error">Impossible d\'écrire dans le fichier</string>
+    <string name="proxy_host">Nom d\'hôte du proxy</string>
+    <string name="pcap_load_in_progress">Chargement du fichier de capture en cours, merci de patienter</string>
+    <string name="geo_db_missing">Base de données de géolocalisation manquante</string>
+    <string name="netd_block_missed">Cette connexion a été initiée par netd et n\'a donc pas pu être bloquée</string>
+    <string name="ipv6_bytes_sent">Octets IPv6 envoyés</string>
+    <string name="ipv6_bytes_rcvd">Octets IPv6 reçus</string>
+    <string name="ipv6_bytes_percentage">Pourcentage d\'octets IPv6</string>
+    <string name="export_ellipsis">Exporter…</string>
+    <string name="update_available">Mise à jour disponible</string>
+    <string name="update_action">Mettre à jour</string>
+    <string name="cidr_val">CIDR: %1$s</string>
+    <string name="dump_extensions_summary">Enrichir le format de capture de paquet avec des métadonnées additionnelles, telles que l\'application qui a envoyé/reçu nun paquet donné</string>
+    <string name="malicious_connection_description">Une connexion de l\'application \"%1$s\" a déclenché une règle de détection de malware (%2$s)</string>
+    <string name="cert_exported_now_installed">Certificat exporté, installez-le maintenant à partir des paramètres Android</string>
+    <string name="payload_truncated">La charge utile est tronquée. Pour le voir intégralement, arrêtez la capture et activez \"%1$s\" à partir des réglages de PCAPdroid</string>
+    <string name="dump_extensions">Extensions PCAPdroid</string>
+    <string name="add_action">Ajouter</string>
+    <string name="required">obligatoire</string>
+    <string name="rule_exists">Règle déjà définie</string>
+    <string name="pcapng_format">Format Pcapng</string>
+    <string name="ip_address">Adresse IP</string>
+    <string name="reset_stats_confirm">Voulez-vous réellement remettre les statistiques à zéro ?</string>
+    <string name="destination_ip">Adresse IP de destination</string>
+    <string name="pcapng_format_summary">Exporter les paquets au format Pcapng, qui est plus flexible et permet d\'intégrer des secrets de déchiffrement TLS</string>
+    <string name="connection_error">Erreur de connexion: %1$s</string>
+    <string name="qr_purchase_required">Achetez un jeton de déverrouillage pour poursuivre l’activation via le QR code</string>
+    <string name="sort_by">Trier par</string>
+    <string name="qr_license_confirm">Voulez-vous générer une licence pour l\'appareil \"%1$s\" en utilisant le jeton de déverrouillage suivant ?</string>
+    <string name="invalid_license">Licence invalide</string>
+    <string name="activate_via_qr_code">Activer par QR code</string>
+    <string name="qr_info_text">Installez PCAPdroid depuis Google Play et scannez ce QR code</string>
+    <string name="remove_from_fw_whitelist">Supprimer de la liste autorisée du pare-feu</string>
+    <string name="destination_port">Port de destination</string>
+    <string name="items_delete_confirm">Supprimer les éléments sélectionnés ?</string>
+    <string name="ip_address_or_cidr">Adresse IP / CIDR</string>
+    <string name="dns_servers">Serveurs DNS</string>
+    <string name="ipv4_dns_server">Serveur DNS IPv4</string>
+    <string name="ipv6_dns_server">Serveur DNS IPv6</string>
+    <string name="use_system_dns_summary">Utiliser les serveurs DNS du système si possible</string>
+    <string name="total_bytes">Nombre total d\'octets</string>
+    <string name="many_rules_warning">Vous essayez d\'importer de nombreuses règles, ce qui pourrait rendre l\'application non réactive lors de certaines interactions. Voulez-vous vraiment continuer ?</string>
+    <string name="write_ext_storage_failed">Échec de l\'écriture sur le stockage externe. Consultez le journal de l\'application pour plus de détails</string>
+    <string name="username">Nom d\'utilisateur</string>
+    <string name="password">Mot de passe</string>
+    <string name="qr_code_expired">Le QR code a expiré. Générez un nouveau code QR et réessayez</string>
 </resources>
