--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -303,7 +303,7 @@
     <string name="mitm_setup_wizard_done">PCAPdroid è pronto a decrittare il traffico TLS
 \n
 \nPer saperne di più sulle misure di sicurezza adottate dalle app, che potrebbero interferire con la decrittazione, e su come bypassarle, far riferimento alla <a href="%1$s">guida utente</a></string>
-    <string name="app_intro_firewall_msg">Grazie al <a href="%1$s">Firewall</a> integrato puoi facilmente bloccare l\'accesso Internet ad app o domini specifici \n \nCombina questa funzione con la visibilità sul traffico e otterrai lo strumento definitivo per proteggere la tua privacy</string>
+    <string name="app_intro_firewall_msg">Grazie al <a href="%1$s">Firewall</a> integrato puoi facilmente bloccare l\'accesso Internet a specifiche app, domini o nazioni \n \nCombina questa funzione con la visibilità sul traffico e otterrai lo strumento definitivo per proteggere la tua privacy</string>
     <string name="block_private_dns">Blocca il DNS privato</string>
     <string name="privacy_first">Prima la privacy</string>
     <string name="block_private_dns_summary">Rileva e, se possibile, blocca il DNS privato per ispezionare il traffico DNS. Disabilitare l\'opzione potrebbe compromettere l\'analisi del traffico</string>
@@ -531,4 +531,13 @@
     <string name="decrypt_pcap_file">Decritta il file PCAP/Pcapng…</string>
     <string name="dump_extensions_how_to">Come visualizzare le estensioni dump PCAPdroid in Wireshark</string>
     <string name="ip_address_or_cidr">Indirizzo IP / CIDR</string>
+    <string name="tcp_collector_info">Collettore TCP: %1$s:%2$d</string>
+    <string name="tcp_exporter">Esportatore TCP</string>
+    <string name="tcp_udp_exporter">Esportatore TCP/UDP</string>
+    <string name="tcp_exporter_info">Invia il PCAP a un collettore TCP remoto (pcap-over-ip)</string>
+    <string name="generate_api_key">Genera chiave API</string>
+    <string name="no_permissions_set_info">Nessun permesso impostato. Avvia PCAPdroid tramite StartActivityForResult per mostrare la richiesta di permesso</string>
+    <string name="show_api_key">Mostra chiave API</string>
+    <string name="api_key">Chiave API</string>
+    <string name="api_key_discard_confirm">Vuoi veramente scartare l\'attuale chiave API e generarne una nuova?</string>
 </resources>
